.. following on from previous commit.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,17 +6,17 @@
    <meta name="author" content="Julian Yap" />
 
    <!-- syntax highlighting CSS -->
-   <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
+   <link rel="stylesheet" href="{{ site.baseurl }}css/syntax.css" type="text/css" />
 
    <!-- Homepage CSS -->
-   <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
+   <link rel="stylesheet" href="{{ site.baseurl }}css/screen.css" type="text/css" media="screen, projection" />
 </head>
 <body>
 
 <div class="site">
   <div class="title">
-    <a href="/">Julian Yap</a>
-    <a class="extra" href="/">home</a>
+    <a href="{{ site.baseurl }}">Julian Yap</a>
+    <a class="extra" href="{{ site.baseurl }}">home</a>
   </div>
   
   {{ content }}
