--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 <div class="site">
   <div class="title">
     <a href="{{ site.baseurl }}">Julian Yap</a>
-    <a class="extra" href="{{ site.baseurl }}">home</a>
+    <a class="extra" href="{{ site.baseurl }}">Home</a>
   </div>
   
   {{ content }}
