--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
    <meta name="author" content="Julian Yap" />
+   <link href="{{ site.baseurl }}atom.xml" rel="alternate" title="Julian Yap" type="application/atom+xml" />
 
    <!-- syntax highlighting CSS -->
    <link rel="stylesheet" href="{{ site.baseurl }}css/syntax.css" type="text/css" />
@@ -31,6 +32,11 @@
         <a href="http://github.com/jyap808/">github.com/jyap808</a><br />
         <a href="http://twitter.com/jyap/">twitter.com/jyap</a><br />
       </p>
+    </div>
+    <div class="rss">
+      <a href="{{ site.baseurl }}atom.xml">
+        <img src="{{ site.baseurl }}images/rss.png" alt="Subscribe to RSS Feed" />
+      </a>
     </div>
   </div>
 </div>
