--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,5 +55,10 @@
 
 </script>
 
+<!-- <a title="Real Time Web Analytics" href="http://getclicky.com/66512607"><img alt="Real Time Web Analytics" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a> -->
+<script src="//static.getclicky.com/js" type="text/javascript"></script>
+<script type="text/javascript">try{ clicky.init(66512607); }catch(e){}</script>
+<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/66512607ns.gif" /></p></noscript>
+
 </body>
 </html>
