--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <title>{{ page.title }}</title>
+   <title>{{ page.title }} - Julian Yap</title>
    <meta name="author" content="Julian Yap" />
    <link href="{{ site.baseurl }}atom.xml" rel="alternate" title="Julian Yap" type="application/atom+xml" />
 
@@ -55,7 +55,7 @@
 
 </script>
 
-<!-- <a title="Real Time Web Analytics" href="http://getclicky.com/66512607"><img alt="Real Time Web Analytics" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a> -->
+<a title="Real Time Web Analytics" href="http://getclicky.com/66512607"><img alt="Real Time Web Analytics" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
 <script src="//static.getclicky.com/js" type="text/javascript"></script>
 <script type="text/javascript">try{ clicky.init(66512607); }catch(e){}</script>
 <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/66512607ns.gif" /></p></noscript>
