New post. Reformat title, fix RSS, add 404 page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <title>{{ page.title }} - Julian Yap</title>
+   <title>Julian Yap: {{ page.title }}</title>
    <meta name="author" content="Julian Yap" />
    <link href="{{ site.baseurl }}atom.xml" rel="alternate" title="Julian Yap" type="application/atom+xml" />
 
