--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,8 @@
     </div>
     <div class="contact">
       <p>
-        <a href="http://twitter.com/jyap/">twitter.com/jyap</a><br />
+        <a href="https://twitter.com/jyap" class="twitter-follow-button" data-show-count="false" data-lang="en" data-size="large">Follow @jyap</a>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
       </p>
     </div>
     <div class="rss">
@@ -54,7 +55,6 @@
 
 </script>
 
-<a title="Real Time Web Analytics" href="http://getclicky.com/66512607"><img alt="Real Time Web Analytics" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
 <script src="//static.getclicky.com/js" type="text/javascript"></script>
 <script type="text/javascript">try{ clicky.init(66512607); }catch(e){}</script>
 <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/66512607ns.gif" /></p></noscript>
