Layout changes and other clean ups.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 
 <div class="site">
   <div class="title">
-    <a href="{{ site.baseurl }}">Julian Yap</a>
+    <a href="{{ site.baseurl }}" title="Julian Yap: Home">Julian Yap</a>
   </div>
   
   {{ content }}
@@ -24,7 +24,7 @@
   <div class="footer">
     <div class="contact">
       <p>
-        Julian Yap<br />
+        Copyright © Julian Yap 2011
       </p>
     </div>
     <div class="contact">
@@ -34,9 +34,7 @@
       </p>
     </div>
     <div class="rss">
-      <a href="{{ site.baseurl }}atom.xml">
-        <img src="{{ site.baseurl }}images/rss.png" alt="Subscribe to RSS Feed" />
-      </a>
+      <a href="http://fusion.google.com/add?source=atgs&feedurl=http%3A//julianyap.com/atom.xml"><img src="http://buttons.googlesyndication.com/fusion/add.gif" border="0" alt="Add to Google"></a>
     </div>
   </div>
 </div>
