--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,8 @@
 <div class="site">
   <div class="title">
     <a href="{{ site.baseurl }}" title="Julian Yap: Home">Julian Yap</a>
+    <a href="https://twitter.com/jyap" class="twitter-follow-button" data-show-count="true" data-lang="en" data-size="large">Follow @jyap</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
   </div>
   
   {{ content }}
@@ -25,12 +27,6 @@
     <div class="contact">
       <p>
         Copyright © Julian Yap 2011
-      </p>
-    </div>
-    <div class="contact">
-      <p>
-        <a href="https://twitter.com/jyap" class="twitter-follow-button" data-show-count="false" data-lang="en" data-size="large">Follow @jyap</a>
-        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
       </p>
     </div>
     <div class="rss">
