Implement Feedburner RSS

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
       </p>
     </div>
     <div class="rss">
-      <a href="http://fusion.google.com/add?source=atgs&feedurl=http%3A//julianyap.com/atom.xml"><img src="http://buttons.googlesyndication.com/fusion/add.gif" border="0" alt="Add to Google"></a>
+      <a href="http://feeds.julianyap.com/julianyap"><img src="{{ site.baseurl }}images/rss.png" alt="Subscribe to RSS Feed"/></a>
     </div>
   </div>
 </div>
