--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
    <title>Julian Yap: {{ page.title }}</title>
    <meta name="author" content="Julian Yap" />
    <link href="{{ site.baseurl }}atom.xml" rel="alternate" title="Julian Yap" type="application/atom+xml" />
+   <link rel="shortcut icon" href="{{ site.baseurl }}favicon.ico" />
 
    <!-- syntax highlighting CSS -->
    <link rel="stylesheet" href="{{ site.baseurl }}css/syntax.css" type="text/css" />
