--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>Julian Yap: {{ page.title }}</title>
    <meta name="author" content="Julian Yap" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
    <link href="{{ site.baseurl }}atom.xml" rel="alternate" title="Julian Yap" type="application/atom+xml" />
    <link rel="shortcut icon" href="http://julianyap.com/favicon.ico" />
 
