--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,11 @@
 ---
 layout: default
 ---
+{% if page.post-link %}
+<h1><a href="{{ page.post-link }}">{{ page.title }}</a></h1>
+{% else %}
+<h1>{{ page.title }}</h1>
+{% endif %}
 <div id="post">
 {{ content }}
 </div>
