--- a/css/screen.css
+++ b/css/screen.css
@@ -42,10 +42,6 @@ a:hover {
   color: black;
 }
 
-a:visited {
-  color: #a0a;
-}
-
 table {
   font-size: inherit;
   font: 100%;
@@ -88,6 +84,19 @@ hr.front {
   width: 50%;
   position: relative;
   margin: 15px auto;
+}
+
+a.glyph-permalink {
+  text-decoration: none;
+  color: #808080;
+  font-size: 110%;
+  margin-left: .5em;
+  border: 0;
+  padding: 3px;
+}
+
+a.glyph-permalink:hover {
+  color: #a00;
 }
 
 /*****************************************************************************/
