Change header to point to Feedburner RSS feed

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
    <title>Julian Yap: {{ page.title }}</title>
    <meta name="author" content="Julian Yap" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-   <link href="{{ site.baseurl }}atom.xml" rel="alternate" title="Julian Yap" type="application/atom+xml" />
+   <link href="http://feeds.julianyap.com/julianyap" rel="alternate" title="Julian Yap" type="application/rss+xml" />
    <link rel="shortcut icon" href="http://julianyap.com/favicon.ico" />
 
    <!-- syntax highlighting CSS -->
