New post and formatting changes

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,7 @@ layout: default
 <div id="post">
 {{ content }}
 </div>
+<div align="right" class="date-container">{{ page.date | date:"%A, %e %B %Y" | upcase }}</div>
 
 <div>
 <a href="https://twitter.com/share" class="twitter-share-button" data-via="jyap" data-size="large">Tweet</a>
