--- a/css/screen.css
+++ b/css/screen.css
@@ -23,7 +23,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-size: 100%;
+  font-size: 110%;
 }
 
 h1 {
@@ -176,6 +176,10 @@ a.glyph-permalink:hover {
 
 .site .footer .rss img {
   border: 0;
+}
+
+.date-container {
+  margin-bottom: 1em;
 }
 
 /*****************************************************************************/
