--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,11 +2,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+   {% if page.title == 'Home' %}
+   <title>Julian Yap</title>
+   {% else %}
    <title>Julian Yap: {{ page.title }}</title>
+   {% endif %}
    <meta name="author" content="Julian Yap" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
    <link href="http://feeds.julianyap.com/julianyap" rel="alternate" title="Julian Yap" type="application/rss+xml" />
-   <link rel="shortcut icon" href="http://julianyap.com/favicon.ico" />
+   <link rel="shortcut icon" href="/favicon.ico" />
 
    <!-- syntax highlighting CSS -->
    <link rel="stylesheet" href="{{ site.baseurl }}css/syntax.css" type="text/css" />
