--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 {% if page.post-link %}
-<h1><a href="{{ page.post-link }}">{{ page.title }}</a></h1>
+<h1><a href="{{ page.post-link }}" title="External link">{{ page.title }}</a></h1>
 {% else %}
 <h1>{{ page.title }}</h1>
 {% endif %}
