--- a/css/screen.css
+++ b/css/screen.css
@@ -36,7 +36,7 @@ p {
 
 a {
   text-decoration: none;
-  color: #00a;
+  color: #0000a9;
 }
 
 a:hover {
@@ -55,6 +55,7 @@ blockquote {
   margin: 2em 2em 2em 1em;
   border-left: 2px solid #999;
   padding-left: 0.5em;
+  color: #404040;
 }
 
 /*****************************************************************************/
@@ -68,14 +69,14 @@ ul.posts {
   margin-bottom: 2em;
 }
 
-  ul.posts li {
-    line-height: 1.75em;
-  }
+ul.posts li {
+  line-height: 1.75em;
+}
 
 ul.posts span.post_date {
-    color: #aaa;
-    font-family: Monaco, "Courier New", monospace;
-    font-size: 80%;
+  color: #aaa;
+  font-family: Monaco, "Courier New", monospace;
+  font-size: 80%;
 } 
 
 hr.front {
@@ -95,10 +96,11 @@ a.glyph-permalink {
   margin-left: .5em;
   border: 0;
   padding: 3px;
+  font-family: "Hiragino Kaku Gothic Pro", "Osaka", "Zapf Dingbats";
 }
 
 a.glyph-permalink:hover {
-  color: #a00;
+  color: #aa0000;
 }
 
 /*****************************************************************************/
@@ -116,14 +118,14 @@ a.glyph-permalink:hover {
 }
 
 .title {
-  color: #a00;
+  color: #aa0000;
   font-weight: bold;
   margin-bottom: 3em;
 }
 
 .site .title a {
   font-size: 150%;
-  color: #a00;
+  color: #aa0000;
   text-decoration: none;
 }
 
@@ -195,37 +197,37 @@ a.glyph-permalink:hover {
   /* standard */
 
   #post pre {
-    border: 1px solid #ddd;
-    background-color: #eef;
-    padding: 0 .4em;
+border: 1px solid #ddd;
+background-color: #eef;
+padding: 0 .4em;
   }
 
   #post ul,
   #post ol {
-    margin-left: 1.35em;
+margin-left: 1.35em;
   }
 
   #post code {
-    border: 1px solid #ddd;
-    background-color: #eef;
-    font-size: 85%;
-    padding: 0 .2em;
+border: 1px solid #ddd;
+background-color: #eef;
+font-size: 85%;
+padding: 0 .2em;
   }
 
-    #post pre code {
-      border: none;
-    }
+#post pre code {
+  border: none;
+}
 
   /* terminal */
 
   #post pre.terminal {
-    border: 1px solid black;
-    background-color: #333;
-    color: white;
+border: 1px solid black;
+background-color: #333;
+color: white;
   }
 
   #post pre.terminal code {
-    background-color: #333;
+background-color: #333;
   }
 
 #related {
