--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,12 +9,13 @@ layout: default
 <div id="post">
 {{ content }}
 </div>
-<div align="right" class="date-container">{{ page.date | date:"%A, %e %B %Y" | upcase }}</div>
 
 <div>
 <a href="https://twitter.com/share" class="twitter-share-button" data-via="jyap" data-size="large">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
+
+<div align="right" class="date-container">{{ page.date | date:"%e %B %Y @ %I:%M%p" | upcase }}</div>
 
 <div id="related">
   <h2>Related Posts</h2>
