Removy Clicky, modify footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,8 +35,10 @@
         Copyright © Julian Yap 2011
       </p>
     </div>
-    <div class="rss">
-      <a href="http://feeds.julianyap.com/julianyap"><img src="{{ site.baseurl }}images/rss.png" alt="Subscribe to RSS Feed"/></a>
+    <div>
+      <p>
+      Follow Julian: <a href="http://twitter.com/jyap">Twitter</a> / <a href="https://plus.google.com/111539417571342089192/" rel="author">Google+</a> / <a href="http://feeds.julianyap.com/julianyap">RSS</a>
+      </p>
     </div>
   </div>
 </div>
@@ -52,9 +54,6 @@ piwikTracker.enableLinkTracking();
 } catch( err ) {}
 </script><noscript><p><img src="http://www2.julianyap.com/stats/piwik.php?idsite=1" style="border:0" alt="" /></p></noscript>
 
-<script src="//static.getclicky.com/js" type="text/javascript"></script>
-<script type="text/javascript">try{ clicky.init(66512607); }catch(e){}</script>
-<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/66512607ns.gif" /></p></noscript>
 
 </body>
 </html>
