Modify page titles

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
    {% if page.title == 'Home' %}
    <title>Julian Yap</title>
    {% else %}
-   <title>Julian Yap: {{ page.title }}</title>
+   <title>{{ page.title }}</title>
    {% endif %}
    <meta name="author" content="Julian Yap" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
