Move out Projects, Archives to separate pages. Small layout changes

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,11 +26,11 @@ layout: default
   </ul>
 </div>
 
-<div id="projects">
-  <h1>Projects</h1>
+<div>
+  <h1>Pages</h1>
   <ul class="posts">
-    <li><a href="http://cameralensapps.com/nikon/">Nikon Lens Buddy:</a> Over 160 Nikon, Sigma, Tamron and Tokina lenses for Nikon cameras. Over 575 lens reviews. For iPhone, iPod touch, and iPad.</li>
-    <li><a href="http://cameralensapps.com/canon/">Canon Lens Buddy:</a> Over 150 Canon, Sigma, Tamron and Tokina lenses for Canon DSLR's. Over 735 lens reviews. For iPhone, iPod touch, and iPad.</li>
-    <li><a href="http://cameralensapps.com/mirrorless/">Mirrorless Lenses:</a> Over 75 Micro Four Thirds, Nikon CX, Sony E, Samsung NX, Pentax Q and Four Thirds Mount lenses. Over 205 reviews. For iPhone, iPod touch, and iPad.</li>
+    <li><a href="{{ site.baseurl }}pages/about.html">About</a></li>
+    <li><a href="{{ site.baseurl }}pages/archives.html">Archives</a></li>
+    <li><a href="{{ site.baseurl }}pages/projects.html">Projects</a></li>
   </ul>
 </div>
