--- a/css/screen.css
+++ b/css/screen.css
@@ -27,6 +27,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
+  font-size: 14pt;
   margin-bottom: 1em;
 }
 
@@ -121,10 +122,11 @@ a.glyph-permalink:hover {
   color: #aa0000;
   font-weight: bold;
   margin-bottom: 3em;
+  text-shadow: 1px 1px rgb(204, 204, 204);
 }
 
 .site .title a {
-  font-size: 150%;
+  font-size: 30pt;
   color: #aa0000;
   text-decoration: none;
 }
@@ -190,52 +192,45 @@ a.glyph-permalink:hover {
 /*
 /*****************************************************************************/
 
-#post {
+/* standard */
 
-}
-
-  /* standard */
-
-  #post pre {
+#post pre {
 border: 1px solid #ddd;
 background-color: #eef;
 padding: 0 .4em;
-  }
+}
 
-  #post ul,
-  #post ol {
+#post ul,
+#post ol {
 margin-left: 1.35em;
-  }
+}
 
-  #post code {
+#post code {
 border: 1px solid #ddd;
 background-color: #eef;
 font-size: 85%;
 padding: 0 .2em;
-  }
+}
 
 #post pre code {
   border: none;
 }
 
-  /* terminal */
+/* terminal */
 
-  #post pre.terminal {
+#post pre.terminal {
 border: 1px solid black;
 background-color: #333;
 color: white;
-  }
-
-  #post pre.terminal code {
-background-color: #333;
-  }
-
-#related {
-  margin-top: 3em;
 }
 
-#related h2 {
-  margin-bottom: 1em;
+#post pre.terminal code {
+background-color: #333;
+}
+
+#related {
+  text-align: left;
+  margin-top: 3em;
 }
 
 /* iPad [portrait + landscape] */
