--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
    <title>{{ page.title }}</title>
    {% endif %}
    <meta name="author" content="Julian Yap" />
-   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
    <link href="http://feeds.julianyap.com/julianyap" rel="alternate" title="Julian Yap" type="application/rss+xml" />
    <link rel="shortcut icon" href="/favicon.ico" />
 
@@ -16,20 +16,34 @@
    <link rel="stylesheet" href="{{ site.baseurl }}css/syntax.css" type="text/css" />
 
    <!-- Homepage CSS -->
-   <link rel="stylesheet" href="{{ site.baseurl }}css/screen.css" type="text/css" media="screen, projection" />
+   <!-- <link rel="stylesheet" href="{{ site.baseurl }}css/screen.css" type="text/css" media="screen, projection" /> -->
+   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}css/base.css">
+   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}css/skeleton.css">
+   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}css/layout.css">
+
 </head>
 <body>
 
-<div class="site">
-  <div class="title">
+<div class="container">
+  <div class="sixteen columns title">
     <a href="{{ site.baseurl }}" title="Julian Yap: Home">Julian Yap</a>
+  </div>
+  
+  <div class="eleven columns">
+  {{ content }}
+  </div>
+  <div class="four columns offset-by-one">
+  <h1>Pages</h1>
+  <ul class="posts">
+    <li><a href="{{ site.baseurl }}pages/about.html">About</a></li>
+    <li><a href="{{ site.baseurl }}pages/archives.html">Archives</a></li>
+    <li><a href="{{ site.baseurl }}pages/projects.html">Projects</a></li>
+  </ul>
     <a href="https://twitter.com/jyap" class="twitter-follow-button" data-show-count="true" data-lang="en" data-size="large">Follow @jyap</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
   </div>
-  
-  {{ content }}
-  
-  <div class="footer">
+
+  <div class="sixteen columns footer">
     <div class="contact">
       <p>
         Copyright © Julian Yap 2011
