--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,13 +10,13 @@
    <meta name="author" content="Julian Yap" />
    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
    <link href="http://feeds.julianyap.com/julianyap" rel="alternate" title="Julian Yap" type="application/rss+xml" />
+   <link href="https://plus.google.com/111539417571342089192" rel="publisher" />
    <link rel="shortcut icon" href="/favicon.ico" />
 
    <!-- syntax highlighting CSS -->
    <link rel="stylesheet" href="{{ site.baseurl }}css/syntax.css" type="text/css" />
 
    <!-- Homepage CSS -->
-   <!-- <link rel="stylesheet" href="{{ site.baseurl }}css/screen.css" type="text/css" media="screen, projection" /> -->
    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}css/base.css">
    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}css/skeleton.css">
    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}css/layout.css">
@@ -39,8 +39,15 @@
     <li><a href="{{ site.baseurl }}pages/archives.html">Archives</a></li>
     <li><a href="{{ site.baseurl }}pages/projects.html">Projects</a></li>
   </ul>
-    <a href="https://twitter.com/jyap" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @jyap</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+  <!-- AddThis Button BEGIN -->
+  <h1>Follow Me</h1>
+  <div class="addthis_toolbox addthis_32x32_style addthis_vertical_style">
+  <a class="addthis_button_twitter_follow" addthis:userid="jyap"></a>
+  <a class="addthis_button_google_follow" addthis:userid="110967630299632321627"></a>
+  <a class="addthis_button_rss_follow" addthis:url="http://feeds.julianyap.com/julianyap"></a>
+  </div>
+  <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=xa-4f30f5735bbf9458"></script>
+  <!-- AddThis Button END -->
   </div>
 
   <div class="sixteen columns footer">
