Clean up and Licence changes

--- a/css/layout.css
+++ b/css/layout.css
@@ -1,10 +1,11 @@
 /*
-* Skeleton V1.1
-* Copyright 2011, Dave Gamache
-* www.getskeleton.com
+* Copyright 2012, Julian Yap
+* This file contains all the base layout overrides that differ from Skeleton (www.getskeleton.com).
+* Feel free to use the HTML and CSS as you please but I would greatly appreciate if you put a little bit of effort into changing the colors and look of your site.
+* Please do not use the diamond glyph since I want to keep that unique in my design. 
+* 
 * Free to use under the MIT license.
 * http://www.opensource.org/licenses/mit-license.php
-* 8/17/2011
 */
 
 /* Table of Content
