--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
-   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
    {% if page.title == 'Home' %}
    <title>Julian Yap</title>
    {% else %}
