Remove some. Update layout to auto-update Copyright date.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@
   <div class="sixteen columns footer">
     <div class="contact">
       <p>
-        Copyright © Julian Yap 2012
+        Copyright © Julian Yap {{ 'now' | date: "%Y" }}
       </p>
     </div>
     <div>
