--- a/css/layout.css
+++ b/css/layout.css
@@ -158,13 +158,19 @@ a.glyph-permalink:hover {
   color: #aa0000;
 }
 
+code.go {
+  color: #000;
+}
+
 code {
-  background-color: #eef;
+  color: #000;
+  background-color: #f0f0f0;
   font-size: 85%;
   padding: 0 .2em;
   display: block;
   padding: 0.5em 1em;
   border: 1px solid #bebab0;
+  font-family: 'Ubuntu Mono', Consolas, 'Deja Vu Sans Mono', 'Bitstream Vera Sans Mono', Monaco, 'Courier New';
 }
 
 /* terminal */
