--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@
   <div class="sixteen columns footer">
     <div class="contact">
       <p>
-        Copyright © Julian Yap {{ 'now' | date: "%Y" }}
+        Copyright © Julian Yap {{ page.date | date: "%Y" }}
       </p>
     </div>
     <div>
@@ -63,18 +63,6 @@
     </div>
   </div>
 </div>
-<!-- Analytics -->
-<script type="text/javascript">
-var pkBaseURL = (("https:" == document.location.protocol) ? "https://www2.julianyap.com/stats/" : "http://www2.julianyap.com/stats/");
-document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script type="text/javascript">
-try {
-var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 1);
-piwikTracker.trackPageView();
-piwikTracker.enableLinkTracking();
-} catch( err ) {}
-</script><noscript><p><img src="http://www2.julianyap.com/stats/piwik.php?idsite=1" style="border:0" alt="" /></p></noscript>
-
 
 </body>
 </html>
