Fix copyright date in footer. From: http://stackoverflow.com/questions/12464656/get-todays-date-in-jekyll-with-liquid-markup

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@
   <div class="sixteen columns footer">
     <div class="contact">
       <p>
-        Copyright © Julian Yap {{ page.date | date: "%Y" }}
+        Copyright © Julian Yap {{ site.time | date: '%y' }}
       </p>
     </div>
     <div>
