--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@
   <div class="sixteen columns footer">
     <div class="contact">
       <p>
-        Copyright © Julian Yap {{ site.time | date: '%y' }}
+        Copyright © Julian Yap {{ site.time | date: '%Y' }}
       </p>
     </div>
     <div>
