--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}css/base.css">
    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}css/skeleton.css">
    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}css/layout.css">
+   <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700,400italic,600italic,700italic' rel='stylesheet' type='text/css'>
 
 </head>
 <body>
@@ -49,7 +50,7 @@
   <div class="sixteen columns footer">
     <div class="contact">
       <p>
-        Copyright © Julian Yap {{ site.time | date: '%Y' }}
+        © {{ site.time | date: '%Y' }} Julian Yap
       </p>
     </div>
   </div>
