--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,7 @@
     <li><a href="{{ site.baseurl }}pages/archives.html">Archives</a></li>
     <li><a href="{{ site.baseurl }}pages/projects.html">Projects</a></li>
     <li><a href="{{ site.baseurl }}pages/cryptoaffiliates.html">Crypto Affiliates</a></li>
+    <li><a href="{{ site.baseurl }}pages/macwalletbuilds.html">Signed Mac Wallets</a></li>
   </ul>
   <h1>Follow Me</h1>
     <a class="webicon twitter" href="http://twitter.com/jyap">Twitter</a>
